# skills-registry

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: ai.rs  config.rs  error.rs  main.rs  models.rs  parser.rs  store.rs
backend/src/handlers/: auto_tag.rs  combinations.rs  install.rs  mod.rs  skills.rs  tags.rs
docs/: api.md
docs/plans/: 2026-04-04-skills-registry-design.md  2026-04-04-skills-registry-impl.md  2026-04-05-combinations-feature.md  2026-04-05-github-import.md  2026-04-11-agent-based-install.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddSkillModal.tsx  CombinationCard.tsx  CombinationDetail.tsx  CombinationsPage.tsx  CreateCombinationModal.tsx  GithubImportModal.tsx  ImportModal.tsx  SearchBar.tsx  Sidebar.tsx  SkillCard.tsx  SkillDetail.tsx  SkillGrid.tsx  SuggestTagsModal.tsx  TagManagementPage.tsx
registry/skill-to-sop/: SKILL.md
registry/skill-to-sop/references/: rule-extraction-guide.md
registry/test-skill/: SKILL.md
